[project]
name = "mistral-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "mistral-common>=1.3.1",
    "pyyaml>=6.0.2",
    "safetensors>=0.5.3",
    "simple-parsing>=0.1.7",
    "tensorboard>=2.19.0",
    "torch==2.2",
    "tqdm>=4.67.1",
    "xformers==0.0.24",
]
